main.tf
# resource "aws_instance" "example" {
#     ami = "ami-0f310fced6141e627"
#     instance_type = "t2.micro"
#     tags = {
#         Name = "${var.project}-web"
#     }
# }
